feat: enhance mobile header transition and resize behavior

--- a/index-v9.html
+++ b/index-v9.html
@@ -266,7 +266,6 @@
             }
 
             #mobile-header {
-                border: 1px solid red;
                 position: relative;
                 display: flex;
                 justify-content: center;
@@ -278,10 +277,7 @@
                 gap: 10px;
                 border-radius: 10px 10px 0px 0px;
                 top: 0px;
-
-                cursor: pointer;
-
-
+                transition: top 0.5s ease;
             }
         }
 
@@ -576,6 +572,10 @@
 
             isOpen = !isOpen;
 
+            // Resize immediately when expanding
+            if (isOpen) {
+                map.resize();
+            }
 
             // Toggle the rotation class on the SVG
             const headerSvg = mobileHeader.querySelector('svg');
@@ -590,6 +590,9 @@
                 firstOpen = false;
             };
 
+            setTimeout(() => {
+                map.resize();
+            }, 500); // Ensure transition is applied
 
             mapDiv.addEventListener('transitionend', onTransitionEnd);
         });
@@ -603,7 +606,6 @@
             } else {
                 // Maintain current state in mobile view
                 mapDiv.style.height = isOpen ? '90vh' : '40px';
-
                 // Ensure SVG rotation matches the current state
                 const headerSvg = mobileHeader.querySelector('svg');
                 if (headerSvg) {
@@ -688,6 +690,11 @@
 
                 // Use the new function for handling location selection
                 handleLocationSelection(row.id);
+
+
+                if (window.innerWidth < 768) {
+                    mobileHeader.dispatchEvent(new Event('click'));
+                }
             });
 
             function processCSVData(data) {
@@ -947,3 +954,4 @@
 </body>
 
 </html>
+```
